# it-help-desk

./: .env.example  .gitignore  BOB-DAY11-MULTIDOMAIN-CONTEXT.md  BOB-Developer-B-work-done.md  CONTEXT.md  DEVELOPER-A-PROMPT.md  DEVELOPER-B-PROMPT.md  Dockerfile  EXPLAINER.md  FINAL_INTERNSHIP_PROJECT_REPORT.md  HIGH-LEVEL-ARCHITECTURE.md  IT_Helpdesk_Improvements_Proposal.md  PROJECT_PIPELINE_REPORT.md  README.md  RESTART-GUIDE.md  SESSION-LOG-V3.md  SESSION-LOG.md  git-setup-reference.md  ibm-it-help-desk-copilot-independent-architecture-plan.html  it-helpdesk-chatbot-plan.md  it-helpdesk-openapi.json  manifest.json  pyproject.toml  rag_core.py  requirements.txt  team-collaboration-plan.md
app/: __init__.py  main.py
app/api/: dependencies.py  routes.py  schemas.py
app/core/: config.py
app/graph/: citation_contract.py  state.py  workflow.py
app/ingestion/: chunker.py  cos_source.py  indexer.py  metadata.py  pdf_parser.py  run.py  (+2 more)
config/: domains.yaml  ibm_docs_registry.yaml  official_doc_sources.yaml
deployment/: CODE_ENGINE_DEPLOY.md
docs/: COMPLETE_PROJECT_HANDBOOK.md  ibm-crawler.md  ibm-docs-crawler-plan.md  orchestrate-behavior-prompt.md  podman-opensearch.md
openapi/: it_helpdesk_live.json  it_helpdesk_v1.yaml
reports/: CHUNK_AUDIT_V2.md  IBM_Weekly_Progress_Report_IT_Support_Copilot.docx
scripts/: audit_chunks.py  build_weekly_progress_report.py  configure_live_web_search.py  crawl_ibm_docs.py  crawl_ibm_docs_portfolio.py  create_index.py  podman_opensearch.sh  run_eval.py  smoke_test.py  validate_env.py
tests/: __init__.py  conftest.py
(+120 files in other folders)
