[project]
name = "it-help-desk"
version = "0.1.0"
description = "OpenShift & SNO Technical Support Copilot — V3 POC"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py311"
